lil fix for overflow: clip; in css file

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -382,6 +382,7 @@ body {
   margin: 10px 0;
   padding-left: 10px;
   white-space: pre-wrap;
+  overflow: clip;
 }
 
 /* Task archive button */
